error.txt
Traceback (most recent call last):
  File "/mnt/ht2-nas2/EO_test/wj1/mm_series/mmseg_olmoearth_2m/projects/DINOv3/../../mmseg_tools/train.py", line 104, in <module>
    main()
  File "/mnt/ht2-nas2/EO_test/wj1/mm_series/mmseg_olmoearth_2m/projects/DINOv3/../../mmseg_tools/train.py", line 58, in main
    cfg = Config.fromfile(args.config)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/mnt/ht2-nas2/EO_test/miniconda3/envs/abc/lib/python3.12/site-packages/mmengine/config/config.py", line 460, in fromfile
    lazy_import is None and not Config._is_lazy_import(filename):
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/mnt/ht2-nas2/EO_test/miniconda3/envs/abc/lib/python3.12/site-packages/mmengine/config/config.py", line 1664, in _is_lazy_import
    parsed_codes = ast.parse(codes_str)
                   ^^^^^^^^^^^^^^^^^^^^
  File "/mnt/ht2-nas2/EO_test/miniconda3/envs/abc/lib/python3.12/ast.py", line 52, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 1
   _custom_imports = dict(
    ^
SyntaxError: invalid non-printable character U+FEFF
